--- a/ui.frontend/package.json
+++ b/ui.frontend/package.json
@@ -13,10 +13,14 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "emoji-picker-react": "^4.12.3",
+    "i18next": "^25.3.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.0.2",
